<resources>
    <string name="app_name">LittleDrivers</string>
    <string name="cameraview">cameraView</string>
    <string name="angle_lab">Angle:</string>
    <string name="power_lab">Power:</string>
    <string name="direction_lab">Direc:</string>
    <string name="none"></string>
    <string name="front_lab">Front</string>
    <string name="front_right_lab">Front-Right</string>
    <string name="right_lab">Right</string>
    <string name="right_bottom_lab">Right-Bottom</string>
    <string name="bottom_lab">Bottom</string>
    <string name="bottom_left_lab">Left-Bottom</string>
    <string name="left_lab">Left</string>
    <string name="left_front_lab">Front-Left</string>
    <string name="center_lab">Center</string>
    <string name="rights_lab">http://zerokol.com/</string>
    <string name="textview">TextView</string>
    <string name="distance">distance</string>
    <string name="distancetext">Total Distance:</string>
    <string name="Hello">Hello</string>
    <string name="speed">speed</string>
    <string name="alert_obstacle_nearby">ALERT! OBSTACLE NEARBY!</string>
    <string name="speedtext">Speed:</string>
    <string name="safe_drive">Safe drive:</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="please_select_one_of_the_themes_to_play_in">Please select one of the themes to play in:</string>
    <string name="warningmessagePrincess">Be wary Princess! There is an obstacle up ahead :o</string>
</resources>