<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Theme3Activity">

    <LinearLayout
        android:id="@+id/MainLinerLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="71dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/InfoLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="892dp"
                android:layout_height="484dp"
                android:foreground="@drawable/baymaxbackground"
                tools:layout_editor_absoluteX="-8dp"
                tools:layout_editor_absoluteY="0dp">

            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="425dp"
                android:layout_height="345dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/cameraview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.joystickjhr.JoystickJhr
                android:id="@+id/joystick"
                android:layout_width="218dp"
                android:layout_height="212dp"
                android:layout_gravity="center_horizontal"
                app:alphaCircleFirst="260"
                app:alphaCircleSecond="300"
                app:colorFirst="#000000"
                app:colorSecond="#000000"
                app:colorText="#D5D8E7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.949"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.834"
                app:radioCircle="0.4"
                app:relleno="true"
                app:textJoy=""
                app:textSizeJoy="70"
                app:xtextOffset="-55"
                app:ytextOffset="-15"
                tools:ignore="MissingClass">

            </com.example.joystickjhr.JoystickJhr>

            <TextView
                android:id="@+id/WarningMessage"
                android:layout_width="224dp"
                android:layout_height="56dp"
                android:background="#000000"
                android:fontFamily="monospace"
                android:text="@string/alert_obstacle_nearby"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.948"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.278" />

            <Switch
                android:id="@+id/safeDrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/safe_drive"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:thumbTint="#FFFFFF"
                android:trackTint="#9A4242"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/speedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Speed"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.894"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.112" />

            <TextView
                android:id="@+id/distanceView"
                android:layout_width="147dp"
                android:layout_height="22dp"
                android:text="@string/distance"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.041" />

            <TextView
                android:id="@+id/Distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="168dp"
                android:fontFamily="monospace"
                android:text="@string/distancetext"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Current Speed:"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.794"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.112" />


            <ImageButton
                android:id="@+id/home3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/black_home" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="49dp"
                android:layout_height="43dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="84dp"
                app:layout_constraintEnd_toEndOf="@+id/joystick"
                app:layout_constraintStart_toStartOf="@+id/joystick"
                app:layout_constraintTop_toTopOf="@+id/joystick"
                app:srcCompat="@drawable/arrow_up_black" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="49dp"
                android:layout_height="45dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="84dp"
                android:layout_marginBottom="83dp"
                app:layout_constraintBottom_toBottomOf="@+id/joystick"
                app:layout_constraintStart_toStartOf="@+id/joystick"
                app:layout_constraintTop_toTopOf="@+id/joystick"
                app:srcCompat="@drawable/arrow_left_black" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="47dp"
                android:layout_height="48dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintEnd_toEndOf="@+id/joystick"
                app:layout_constraintTop_toTopOf="@+id/joystick"
                app:srcCompat="@drawable/arrow_right_black" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="46dp"
                android:layout_height="47dp"
                android:layout_marginStart="87dp"
                android:layout_marginEnd="85dp"
                app:layout_constraintBottom_toBottomOf="@+id/joystick"
                app:layout_constraintEnd_toEndOf="@+id/joystick"
                app:layout_constraintStart_toStartOf="@+id/joystick"
                app:srcCompat="@drawable/arrow_down_black" /><![CDATA[



            app:layout_constraintVertical_bias="0.015" />

        ]]>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
